# MySmallAgent

./: .env.example  .gitignore  README.md  pyproject.toml
.pytest_tmp/test_activate_non_invocable_sk0/: prompt.md
.pytest_tmp/test_agent_with_memory_injects0/: memory.json
.pytest_tmp/test_reset_session_preserves_m0/: memory.json
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-06-22-agent-core.md  2026-06-25-streaming-thinking-search.md  2026-06-29-memory-search.md  2026-06-29-session-persistence.md  2026-06-29-token-compact-tools.md  2026-07-01-skill-system.md  (+2 more)
my_small_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm.py  memory.py  plan.py  prompt.py  qq_bot.py  session.py  system_prompt.md
my_small_agent/skills/: __init__.py  registry.py
my_small_agent/tools/: __init__.py  activate_skill.py  base.py  current_time.py  deactivate_skill.py  fetch_url.py  file_delete.py  file_read.py  file_write.py  find_file.py  grep_search.py  list_dir.py  memory_save.py  research_topic.py  session_search.py  shell_exec.py  system_info.py  tree.py  web_search.py
tests/: test_agent.py  test_agent_skill.py  test_agent_stream.py  test_cli_compact.py  test_cli_skills.py  test_config.py  test_integration.py  test_llm.py  test_memory.py  test_plan_mode.py  test_plan_mode_lifecycle.py  test_plan_parser.py  test_prompt_manager.py  test_qq_bot.py  test_session.py  test_skills_registry.py  test_tools_builtin.py  test_tools_composite.py  test_tools_memory_search.py  test_tools_new.py  test_tools_registry.py  test_tools_skill.py  test_tools_utility.py
(+99 files in other folders)
