[project]
name = "my-small-agent"
version = "0.1.0"
description = "A small CLI agent powered by OpenAI tool_calls"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pydantic-settings>=2.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "ddgs>=7.0",
    "httpx>=0.27",
    "tzdata; sys_platform == 'win32'",
    "questionary>=2.0",
]

[project.scripts]
agent = "my_small_agent.__main__:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
